@@ -162,6 +162,7 @@ public interface DescriptorConstants {
     static final String ATT_IDENTITY = "identity";
 
     static final String EL_DBSANITY = "dbsanity";
+    static final String ATT_APPVERSION = "appVersion";
     static final String ATT_IN = "in";
     static final String ATT_OUT = "out";
     static final String ATT_TABLES = "tables";
