@@ -33,6 +33,7 @@ enhancements
 - Supporting transcoding to non-empty tables as long as transcoded data is not yet present in the target system
 - transcode feature supports cascade with mutation
 - Supporting 'separator' attribute in <execute> and <evaluate>
+- DB Sanity versioning support, for example: <dbsanity ... appVersion="1.1.2" />
 
 
 bug fixes (Find the bug tracker at http://sourceforge.net/tracker2/?group_id=222964&atid=1057386)
